# slack-claude-code

./: .env.example  .flake8  .gitignore  AGENTS.md  CODEX_APP_SERVER_JSON_RPC.md  LICENSE  PLAN.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  pyproject.toml  run.py
.claude/: CLAUDE.md
.claude/commands/: debug-test-failure.md  test-ui.md
.github/workflows/: release.yml  tests.yml
src/: __init__.py  app.py  cli.py  config.py  config_storage.py  exceptions.py  plan_orchestration.py
src/agents/: __init__.py  executor.py  models.py  orchestrator.py  registry.py
src/aider/: __init__.py  provider.py  streaming.py  subprocess_executor.py
src/approval/: __init__.py  handler.py  plan_manager.py  slack_ui.py
src/backends/: __init__.py  backend_provider.py  execution_result.py  models.py  process_executor_base.py  process_registry.py  registry.py  stream_accumulator.py  stream_parser_base.py  stream_parsing_common.py  tool_summary_registry.py
src/budget/: __init__.py  checker.py  scheduler.py
src/claude/: __init__.py  executor.py  live_pty.py  provider.py  sdk_executor.py  sdk_stream_adapter.py  streaming.py  subprocess_executor.py
src/codex/: __init__.py  approval_bridge.py  capabilities.py  provider.py  pty_executor.py  streaming.py  subprocess_executor.py
src/database/: __init__.py  aiosqlite_compat.py  migrations.py  models.py  repository.py
src/gemini/: __init__.py  provider.py  streaming.py  subprocess_executor.py
src/git/: __init__.py  models.py  service.py  workspace_manager.py
src/pty/: pool.py  (+5 more)
tests/: __init__.py  conftest.py
(+156 files in other folders)
