[project]
name = "slack-claude-code"
version = "0.3.2"
description = "Slack app for running Claude Code CLI commands"
authors = [{name = "Dan"}]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dynamic = ["dependencies"]

[project.scripts]
aislack = "src.app:run"
aislack-config = "src.cli:run"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.27.0"
aiosqlite = "^0.21.0"
pydantic-settings = "^2.7.0"
aiohttp = "^3.13.2"
aiofiles = "^24.1.0"
loguru = "^0.7.0"
cryptography = "^44.0.0"
PyYAML = "^6.0"
claude-code-sdk = "^0.0.25"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
flake8 = "^7.3.0"
black = "^25.9.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "live: marks tests as live integration tests (require Slack credentials)"
]

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",
    "E302",
    "E303",
    "E306",
    "E501",
    "C901",
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/unit/*.py:F401,F841",
    "tests/integration/*.py:F401,F841",
]
